--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -3114,3 +3114,20 @@ input:-internal-autofill-selected {
         text-align: justify;
     }
 }
+
+.dropdown-toggle::after { 
+    content: "";
+    position: absolute;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    transform: translateY(-50%) rotate(45deg);
+    right: 0px;
+    width: 10px;
+    height: 10px;
+    border: 2px solid;
+    border-top: 0;
+    border-left: 0;
+    margin-top: -4px;
+    color: #fff;
+    /* border-left: 0.3em solid transparent; */
+}
