--- a/public/assets/scss/core/withdraw.scss
+++ b/public/assets/scss/core/withdraw.scss
@@ -227,6 +227,7 @@
         display: flex;
         justify-content: space-between;
         cursor: pointer;
+        padding-right: 55px;
     }
     .arrow-down{
         color:$body-bg;
