--- a/public/assets/scss/core/bone-staking.scss
+++ b/public/assets/scss/core/bone-staking.scss
@@ -364,6 +364,7 @@
 }
 .active-inactive{
     .grid-sec {
-        min-height: 427px;
+        // min-height: 427px;
+        height: 100%;
     }
 }
