--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -2363,10 +2363,9 @@ background: $body-bg;
     }
     .text-pop-right{
         font-size: 16px;
+        
     }
-    .form-field{
-        height:auto;
-    }
+    
 }
 .bg-clr{
     .mid-chain{
@@ -3014,7 +3013,6 @@ input:-internal-autofill-selected {
         align-items: center;
         flex-wrap: wrap;
         padding-bottom: 20px;
-        padding-top: 10px;
     }
     .head-txt{
         padding-left: 60px;
@@ -3107,10 +3105,6 @@ input:-internal-autofill-selected {
 // .wallet-network .rounded  span img {
 //     width: 100% !important;
 // }
-
-
-
-
 .table-dem{
     table-layout: fixed;
     width: 100%;
@@ -3197,7 +3191,7 @@ input:-internal-autofill-selected {
             @media #{$max-xsm}{
                 width: 8px;
                 height: 8px;
-                right: -1px;
+                right: 0;
             }
         }
     }
@@ -3232,8 +3226,4 @@ input:-internal-autofill-selected {
             color: $primary !important;
         }
     }
-}
-
-.time-th{
-    width: 314px;
 }
