--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -3013,12 +3013,16 @@ input:-internal-autofill-selected {
         align-items: center;
         flex-wrap: wrap;
         padding-bottom: 20px;
+        margin-bottom: 20px;
     }
     .head-txt{
         padding-left: 60px;
         .top-txt{
             margin-bottom: 0;
         }
+    }
+    .custum-row{
+        margin-bottom: 15px;
     }
 }
 
