--- a/public/assets/scss/core/_reset.scss
+++ b/public/assets/scss/core/_reset.scss
@@ -161,7 +161,12 @@ h6 {
         font-size: 14px;
     }
 }
-
+.fs-14{
+    font-size: 14px;
+    @media #{$max-xsm}{
+        font-size: 13px;
+    }
+}
 p{
     color:rgba(14, 14, 14, 0.89);
     color:rgba($white, 0.89);
