--- a/public/assets/scss/core/bone-staking.scss
+++ b/public/assets/scss/core/bone-staking.scss
@@ -364,7 +364,6 @@
 }
 .active-inactive{
     .grid-sec {
-        // min-height: 427px;
-        height: 100%;
+        min-height: 427px;
     }
 }
