--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -179,7 +179,7 @@
         color:$white;
         right: 0;
         left: auto;
-        top: 35px;
+        top: 50px;
         margin: 0;
         padding: 0;
         // @media #{$max-xl}{
@@ -2865,7 +2865,7 @@ input:-internal-autofill-selected {
 .lg-lft{
     img{
        @media #{$max-sm}{
-            max-width: 35px;
+            max-width: 25px;
         }
     }
 }
@@ -3017,6 +3017,9 @@ input:-internal-autofill-selected {
     }
     .head-txt{
         padding-left: 60px;
+        @media #{$max-md}{
+            padding-left:0;
+        }
         .top-txt{
             margin-bottom: 0;
         }
