--- a/public/assets/scss/core/_cus-var.scss
+++ b/public/assets/scss/core/_cus-var.scss
@@ -23,6 +23,7 @@ $lt-blue:#dce5fd;
 $ltdrk-orange:#f9d2bc;
 $lt-purple-50:#ecd5fd;
 $black:#000;
+$black-800:#212529;
 $red:#ff3030;
 $black-lite:#1c2333;
 // 
