--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -1634,7 +1634,7 @@
         background:$grey-color-800;
         padding: 10px;
         &::placeholder{
-            color:$grey-color-drk;
+            color:$black-800;
             line-height:15px ;
             
         }
@@ -2413,10 +2413,13 @@ input:-internal-autofill-selected {
             padding: 13px 22px !important;
             padding-right: 30px !important;
             height: 100%;
+            min-height: 44px;
             cursor: pointer;
             @media #{$max-xxl}{
                 font-size: 16px;
                 padding: 10px 22px !important;
+                padding-right: 30px !important;
+                min-height: 40px;
             }
             @media #{$max-xl}{
                 font-size: 14px;
@@ -2851,6 +2854,16 @@ input:-internal-autofill-selected {
     font-size: 16px !important;
     font-weight: 500 !important;
 }
+.innerDivBgBlack{
+    &.nav-item.dropdown{
+        min-height: 44px;
+        display: flex;
+        align-items:center;
+        @media #{$max-xxl}{
+            min-height: 40px;
+        }
+    }
+}
 .logo-wrap {
     display: flex;
     align-items: center;
@@ -3268,5 +3281,10 @@ input:-internal-autofill-selected {
         top: 50%;
         right: 12px;
         transform: translateY(-50%);
+    }
+}
+.span-child{
+    span{
+        padding-right: 0 !important;
     }
 }
