--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -18,6 +18,9 @@
 .lite-color{
     color: $grey-color !important;
 }
+.lite-800{
+    color: $black-800 !important;
+}
 // card-style
 
 .cus-card-800 {
