--- a/public/assets/scss/pages/validator.scss
+++ b/public/assets/scss/pages/validator.scss
@@ -182,6 +182,7 @@
     padding: 0 15px;
     @media #{$max-xsm}{
         flex-direction: column;
+        align-items:self-start;
     }
 }
 .grid-info{
