--- a/public/assets/scss/core/_header.scss
+++ b/public/assets/scss/core/_header.scss
@@ -182,6 +182,7 @@
     .navbar-nav .dropdown-menu {
         position: absolute;
         top: 100%;
+        margin-top: 8px;
         @media #{$max-lg}{
             top: 100%;
             right: 0;
@@ -358,16 +359,16 @@
                 // padding: 5px 0;
             } 
         }
+        // @media #{$max-md}{
+        //     left: 0;
+        //     right: auto;
+        //     top: 100%;
+        // }
         @media #{$max-md}{
-            left: 0;
-            right: auto;
-            top: 100%;
-        }
-        @media #{$max-xsm}{
-            left: -20px;
-            right: auto;
+            right: calc(100% - 32px);
             top: 100%;
             width: 230px;
+            margin-top: 5px;
         }
         @media #{$max-xxsm}{
             left: 0;
@@ -459,13 +460,16 @@
                         right: 13px;
                         height: 8px;
                         width: 8px;
+                        margin-top: -3px;
+                    }
+                    @media #{$max-xsm}{
+                        right: 7px;
                     }
                 }
             }
             .dropdown-menu{
                 @media #{$max-md}{
                     left: auto;
-                    right: calc(100% - 18px);
                 }
             }
         }
