--- a/public/assets/scss/core/_reset.scss
+++ b/public/assets/scss/core/_reset.scss
@@ -617,6 +617,9 @@ ul {
                 padding: 5px 0;
                 box-shadow: none;
                 outline: none;
+                @media #{$max-sm}{
+                    right: 20px;
+                }
                 &:hover{
                     box-shadow: none;
                     border: 0;
