--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -3278,7 +3278,7 @@ input:-internal-autofill-selected {
     position: relative;
     .primary-text{
         position: absolute;
-        left: 0;
+        left: 5px;
         right: auto;
         top: auto;
         bottom: -30px;
