--- a/public/assets/scss/pages/_home.scss
+++ b/public/assets/scss/pages/_home.scss
@@ -90,7 +90,7 @@
                 margin-right: 0;
             }
             @media #{$max-md}{
-                margin-right:0; 
+                display: none;
             }
         }
     }
