--- a/public/assets/scss/core/_cus-var.scss
+++ b/public/assets/scss/core/_cus-var.scss
@@ -46,6 +46,7 @@ $max-md : 'only screen and (max-width: 767.98px)';
 $max-sm : 'only screen and (max-width: 574.98px)';
 $max-xsm : 'only screen and (max-width: 480px)';
 $max-xsmm : 'only screen and (max-width: 400px)';
+$max-xxsml : 'only screen and (max-width: 385px)';
 $max-xxsm : 'only screen and (max-width: 350px)';
 
 $minxd : 'only screen and (min-width: 1200px) and (max-width: 1600px)';
