--- a/public/assets/scss/core/_cus-var.scss
+++ b/public/assets/scss/core/_cus-var.scss
@@ -48,6 +48,7 @@ $max-xsm : 'only screen and (max-width: 480px)';
 $max-xsmm : 'only screen and (max-width: 400px)';
 $max-xxsml : 'only screen and (max-width: 385px)';
 $max-xxsm : 'only screen and (max-width: 350px)';
+$max-xxxsml : 'only screen and (max-width: 337px)';
 
 $minxd : 'only screen and (min-width: 1200px) and (max-width: 1600px)';
 $desktop-device : 'only screen and (min-width: 992px) and (max-width: 1199px)';
