--- a/public/assets/scss/core/withdraw.scss
+++ b/public/assets/scss/core/withdraw.scss
@@ -198,7 +198,10 @@
     
     }
     @media #{$max-xsmm}{
-        padding: 0 55% 0 25px;
+        padding: 0 46% 0 25px;
+    }
+    @media #{$max-xxxsml}{
+        padding: 0 42% 0 25px;
     }
 }
 
