--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -2307,7 +2307,11 @@ background: $body-bg;
             opacity: 0.5;
             pointer-events: none;
         }
+        @media #{$max-xsmm} {
+            margin-right: 0;
+        }
     }
+    
     .page-item:last-child {
         margin-right: 0;
     }
@@ -2330,6 +2334,9 @@ background: $body-bg;
             @media #{$max-xsm} {
                 font-size: 14px;
                 padding: 5px 10px;
+            }
+            @media #{$max-xsmm} {
+                font-size: 13px;
             }
            span{
             transition: none;
@@ -3496,5 +3503,10 @@ input:-internal-autofill-selected {
                 margin-bottom: 5px;  
             }
         }
+    }
+}
+.col-md-8.cus-space {
+    @media #{$max-xxsm}{
+        padding: 0; 
     }
 }
