--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -2937,6 +2937,23 @@ input:-internal-autofill-selected {
         }
         
     }
+    &:after{
+        @media #{$max-xl}{
+            margin-top: -3px;   
+        }
+    }
+    .hd-sel{
+        .dropdown-toggle{
+            line-height: 16px;
+            @media #{$max-xxl}{
+                line-height: 20px;
+             }
+             @media #{$max-xl}{
+                padding: 11px 40px 11px 22px !important;
+             }
+        }
+    }
+    
 }
 
 .main-header.header-overide{
@@ -2955,7 +2972,8 @@ input:-internal-autofill-selected {
 }
 .hd-sel{
     font-size: 18px;
-    padding: 11px 22px;
+    // padding: 11px 22px;
+    padding: 0;
     border: none;
     border-radius: 10px;
     -webkit-border-radius: 10px;
@@ -2969,11 +2987,11 @@ input:-internal-autofill-selected {
     width: 240px;
     &.hd-sel-over{
         width: 100%;
-        padding-right: 40px;
-        .nav-link {
-            padding-left: 0;
-            padding-right: 0;
-        }
+        // padding-right: 40px;
+        // .nav-link {
+        //     padding-left: 0;
+        //     padding-right: 0;
+        // }
         .dropdown-menu {
             width: 100%;
             min-width: 210px;
@@ -2985,8 +3003,16 @@ input:-internal-autofill-selected {
         }
     }
     .dropdown-toggle{
-        padding: 0;
+        // padding: 0;
+        padding: 11px 40px 11px 22px !important;
         font-size: 18px;
+        
+        
+        @media #{$max-xl}{
+           font-size: 14px;
+           padding: 12px 40px 12px 22px !important;
+        }
+        
     }
     .dropdown-menu{
         background: $body-bg-secondry !important;
