--- a/public/assets/scss/core/_reset.scss
+++ b/public/assets/scss/core/_reset.scss
@@ -418,7 +418,12 @@ ul {
 .form-group{
     position: relative;
 }
-
+// .staking-main{
+//     padding-top: 117px;
+// }
+.top-space{
+    
+}
 .cmn_dasdrd_table {
     background:$body-bg;
     border-radius: 30px;
