--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -46,6 +46,7 @@
 .top-space{
     padding-top: 76px;
 }
+
 .bottom-pad {
     padding-bottom: 70px;
     @media #{$max-xl}{
@@ -1429,7 +1430,7 @@
 .content-wrap{
     padding: 0 !important;
 }
-.top-space-lg {
+.-lg {
     margin-top: 30px;
 }
 .box-alert{
