--- a/public/assets/scss/core/_header.scss
+++ b/public/assets/scss/core/_header.scss
@@ -1,5 +1,14 @@
+body.modal-open {
+    .main-header{
+        padding-right: 17px;
+        @media #{$max-xl}{
+            padding-right: 0;
+        }
+    }
+}
+
 .main-header {
-    position:sticky;
+    position:fixed;
     top: 0;
     left: 0;
     right: 0;
