--- a/public/assets/scss/core/_reset.scss
+++ b/public/assets/scss/core/_reset.scss
@@ -673,9 +673,9 @@ body {
     // padding-left: 0 !important;   
     // padding-right: 0 !important;
 }
-.modal{
-    padding-right: 0 !important;
-}
+// .modal{
+//     padding-right: 0 !important;
+// }
 .whitespace-nowrap {
     white-space: pre-wrap;
     word-break: break-all;
@@ -834,8 +834,3 @@ body {
     background:$body-bg;
     border: 1px solid rgba($white,0.89);
 }
-
-// body.modal-open {
-//     padding-right: 0!important;
-//     overflow-y: scroll !important;
-// }
