--- a/public/assets/scss/core/_cus-var.scss
+++ b/public/assets/scss/core/_cus-var.scss
@@ -47,6 +47,7 @@ $max-sm : 'only screen and (max-width: 574.98px)';
 $max-xsm : 'only screen and (max-width: 480px)';
 $max-xsmm : 'only screen and (max-width: 400px)';
 $max-xxsml : 'only screen and (max-width: 385px)';
+$max-xms : 'only screen and (max-width: 359px)';
 $max-xxsm : 'only screen and (max-width: 350px)';
 $max-xxxsml : 'only screen and (max-width: 337px)';
 
