--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -3583,3 +3583,10 @@ input:-internal-autofill-selected {
     }
     
 }
+/** faq- style start **/
+.fq-baner{
+    background: url('../../../images/faq-banner.jpg') no-repeat;
+    background-size: 100%;
+    height:500px;
+}
+/** faq- style end **/
