--- a/public/assets/scss/core/_cus-var.scss
+++ b/public/assets/scss/core/_cus-var.scss
@@ -7,6 +7,7 @@ $primary-three:#F28B03;
 $lite-orange:#fff0d4;
 $white:#FFFFFF;
 $lite-grey-secondry:#EAEAE8;
+$ltwh-txt:#ebeaea;
 $body-text:#BBBBBE;
 $body-bg:#151B28;
 $body-bg-secondry:#1E1E1E;
@@ -26,6 +27,7 @@ $black:#000;
 $black-800:#212529;
 $red:#ff3030;
 $black-lite:#1c2333;
+$lt-blk:#282828;
 // 
 
 $min-exl: 'only screen and (min-width: 1920px)';
