--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -3145,19 +3145,19 @@ input:-internal-autofill-selected {
 }
 
 .fix-coin-field{
-    .lite-color{
-        // width: 100px;
-        // overflow: hidden;
-        // white-space: nowrap;
-        // text-overflow: ellipsis;
-        // display: block;
-        // @media #{$max-xxl}{
-        //     width: 80px;
-        // }
-        // @media #{$max-xl}{
-        //     width: 100px;
-        // }
-    }
+    // .lite-color{
+    //     // width: 100px;
+    //     // overflow: hidden;
+    //     // white-space: nowrap;
+    //     // text-overflow: ellipsis;
+    //     // display: block;
+    //     // @media #{$max-xxl}{
+    //     //     width: 80px;
+    //     // }
+    //     // @media #{$max-xl}{
+    //     //     width: 100px;
+    //     // }
+    // }
     .lft-spc{
         position: absolute;
         right: 15px;
