--- a/public/assets/scss/core/_cus-var.scss
+++ b/public/assets/scss/core/_cus-var.scss
@@ -12,6 +12,7 @@ $body-text:#BBBBBE;
 $body-bg:#151B28;
 $body-bg-secondry:#1E1E1E;
 $body-bg-800:#0C0F17;
+$bg-clr:#1a1d26;
 $secondary:#1C1B23;
 $secondary-800:#24232B;
 $grey-color: #596380;
