--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -2806,15 +2806,16 @@ input:-internal-autofill-selected {
 .cus-tooltip {
     position: relative;
     padding-left: 8px;
+    width: 100%;
     .tool-ico {
-        width: 25px;
-        height: 25px;
-        background:$primary;
-        border-radius: 100%;
-        text-align: center;
-        line-height: 30px;
-        font-size: 22px;
-        font-weight: bold;
+        // width: 25px;
+        // height: 25px;
+        // background:$primary;
+        // border-radius: 100%;
+        // text-align: center;
+        // line-height: 30px;
+        // font-size: 22px;
+        // font-weight: bold;
         @media #{$max-md}{
             width: 20px;
             height: 20px;
@@ -2872,11 +2873,13 @@ input:-internal-autofill-selected {
             ~ .tool-desc{
                 display:block;
                 opacity: 1;
+                z-index: 1;
             }   
         }
     }
     
 }
+
 .hd-sel{
     select{
         border: none;
@@ -3599,4 +3602,14 @@ input:-internal-autofill-selected {
         padding: 50px 20px 40px;
     }
 }
-
+.mid-sec{
+    .black-btn{
+        background:$bg-clr;
+    }
+    .btn.grey-btn:disabled{
+        background:$grey-color;
+    }
+    .btn.black-btn:disabled{
+        background:$bg-clr;
+    }
+}
