--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -478,7 +478,7 @@
         color: $body-bg;
         border-color: $body-bg;
         border-width: 0 2px 2px 0;
-        top:18px;
+        top:17px;
         @media #{$max-xxl}{
             top:16px;
         }
@@ -2816,13 +2816,13 @@ input:-internal-autofill-selected {
         // line-height: 30px;
         // font-size: 22px;
         // font-weight: bold;
-        @media #{$max-md}{
-            width: 20px;
-            height: 20px;
-            line-height: 25px;
-            font-size: 14px;
-            font-weight: bold;
-        }
+        // @media #{$max-md}{
+        //     width: 20px;
+        //     height: 20px;
+        //     line-height: 25px;
+        //     font-size: 14px;
+        //     font-weight: bold;
+        // }
         ~ .tool-desc{
             display:none;
             position: absolute;
@@ -3600,6 +3600,9 @@ input:-internal-autofill-selected {
 .acct{
     .val_del_outr{
         padding: 50px 20px 40px;
+        @media #{$max-xsm}{
+            padding: 30px 20px;
+        }
     }
 }
 .mid-sec{
@@ -3611,6 +3614,11 @@ input:-internal-autofill-selected {
     }
     .btn.black-btn:disabled{
         background:$bg-clr;
+    }
+    .btn{
+        @media #{$max-xxsm}{
+            padding: 6px 12px;
+        } 
     }
 }
 .cmng-container{
