--- a/public/assets/scss/core/_cus-var.scss
+++ b/public/assets/scss/core/_cus-var.scss
@@ -29,6 +29,7 @@ $black-800:#212529;
 $red:#ff3030;
 $black-lite:#1c2333;
 $lt-blk:#282828;
+$lt-black:#adaaaa;
 // 
 
 $min-exl: 'only screen and (min-width: 1920px)';
